tests/baselines/reference/breakTarget6.errors.txt
==== tests/cases/compiler/breakTarget6.ts (1 errors) ====
    while (true) {
      break target;
      ~~~~~~~~~~~~~
!!! breakTarget6.ts(2,3): error TS2203: Jump target not found.
    }